assets/css/style.css
{{ $fontsCss := resources.Get "css/fonts.css" | resources.ExecuteAsTemplate "css/fonts.css" . | minify | fingerprint }}
@import url("{{ $fontsCss.RelPermalink }}");
{{ $codeCss := resources.Get "css/code.css" | resources.ExecuteAsTemplate "css/code.css" . | minify | fingerprint }}
@import url("{{ $codeCss.RelPermalink }}");

:root {
	--color: black;
	--main-bg-color: #FFFAF0;
	--consistent-link-color: blue;
	--content-metadata-color: #484848;
	--box-shadow-container-color: #CCCCCC;
	--raised-backgroud-color: white;
	--primary-accent-color: #F48024;
	--secondary-accent-color: #77216F;
	--secondary-accent-color-hover: #833A72;
}

[site-theme="dark"] {
	--color: white;
	--main-bg-color: #2d2d2d;
	--consistent-link-color: #378AD3;
	--content-metadata-color: #d4d4d4;
	--box-shadow-container-color: #222222;
	--raised-backgroud-color: #393939;
}

* {
	font-family: "IBM Plex Sans", Verdana, Geneva, Tahoma, sans-serif;
	color: var(--color);
}

::selection {
	background: var(--primary-accent-color);
	color: black;
}

body {
	margin: 0px;
	width: 100vw;
	overflow-x: hidden;
	background-color: var(--main-bg-color);
}

.taxonomy-list {
	display: inline-flex;
	flex-wrap: wrap;
	padding: 0;
	margin: 0;
	list-style: none;
}

.btn {
	color: white;
	background-color: var(--secondary-accent-color);
	border: none;
	padding: 0.5rem;
	border-radius: 3px;
	border: 2px solid var(--box-shadow-container-color);
}

.btn:hover, .btn:focus, .btn:active  {
	background-color: var(--secondary-accent-color-hover);
	transition: background-color ease-in 0.15s;
	cursor: pointer;
}

#comments-btn {
	margin: auto;
	margin-bottom: 1rem;
}

.taxonomy-metadata > *:first-child {
	margin-top: 1rem;
}

.content-metadata > *:last-child {
	margin-bottom: 0;
}

.taxonomy-list > li {
	margin-right: 0.3rem;
}

.taxonomy-list > li:last-child {
	margin-right: 0;
}

.taxonomy-value {
	display: inline-block;
	padding: 0.15rem 0.4rem;
}

#content-about {
	font-size: medium;
	margin-top: 0;
	margin-bottom: 1em;
}

#header {
	display: flex;
	list-style: none;
	margin-bottom: 1.5rem;
}

#title-container {
	display: flex;
	justify-content: space-between;
	align-items: center;
	margin-bottom: 1rem;
}

#title {
	display: inline-block;
	margin: 0;
	margin-right: 0.5rem;
}

#h1 {
	font-size: x-large;
}

.font-weight-bold {
	font: "IBM Plex Sans";
	font-weight: bold;
}

.font-weight-normal {
	font: "IBM Plex Sans";
	font-weight: unset;
}

.summary-title {
	margin-top: 0;
	font-size: medium;
}

.undecorated-link, .undecorated-link:link, .undecorated-link:visited {
	text-decoration: none;
}

.consistent-link, .consistent-link:link, .consistent-link:visited {
	color: var(--consistent-link-color);
}

.undecorated-list {
	list-style: none;
	padding-left: 0px;
	margin: 0px;
}

#content-container {
	display: flex;
	justify-content: center;
}

#content-container > * {
	margin-right: 1rem;
}

#content-container > *:last-child {
	margin-right: 0rem;
}

.email-component {
	color: inherit;
}

#page-container {
	display: flex;
	justify-content: space-between;
	flex-direction: column;
	height: 100%;
	margin-bottom: 1rem;
	margin-left: 1rem;
	margin-right: 1rem;
}

ul.contact-list > li {
	margin-bottom: 1rem;
}

ul.contact-list > li:last-child {
	margin-bottom: 0rem;
}

nav {
	display: flex;
	justify-content: center;
	background-color: #393939;
	width: 100%;
	border-top: 3px solid var(--primary-accent-color);
	box-shadow: 0 10px 10px -1px rgba(0, 0, 0, 0.25);
}

nav > ul {
	display: flex;
	justify-content: start;
}

nav > ul > li {
	margin-right: 0rem;
}

nav > ul > li > a {
	color: #FFFFFF;
	display: block;
	padding: 1rem;
}

nav > ul > li > a:hover, nav > ul > li > a:focus, nav > ul > li > a:active {
	transition: all 0.15s ease-in;
	background-color: #595959;
}

.content-list > .content-item {
	margin-bottom: 1rem;
}

.content-list > .content-item:last-child {
	margin-bottom: 0rem;
}

.smaller-text {
	font-size: small;
}

#profile-picture {
	border-radius: 3%;
	display: block;
	margin: auto;
	width: 70%;
	max-width: 200px;
	border: 2px solid var(--box-shadow-container-color);
}

#sidebar {
	width: 250px;
	height: 100%;
}

#sidebar > * {
	margin-bottom: 1rem;
}

#sidebar > *:last-child {
	margin-bottom: 0;
}

#theme-btn {
	display: block;
	margin-left: auto;
	margin-right: auto;
	font-size: small;
}

.sidebar-paragraph {
	margin-bottom: 0;
}

.sidebar-section-header {
	font-size: large;
	font-weight: 500;
}

#main {
	min-width: 50%;
	width: 50%;
	display: flex;
	flex-direction: column;
}

#main > * {
	margin-bottom: 1rem;
}

#main > *:last-child {
	margin-bottom: 0;
}

#single-container > * {
	margin-bottom: 1rem;
}

#single-container > *:last-child {
	margin-bottom: 0;
}


#content-title {
	margin-top: 0;
}

.content-metadata, .content-metadata > * {
	color: var(--content-metadata-color);
}

#content > *:last-child {
	margin-bottom: 0;
}

.box-shadow-container {
	padding: 1rem;
	border: 1px solid var(--box-shadow-container-color);
	box-shadow: 4px 4px 4px 2px var(--box-shadow-container-color);
	border-radius: 3px;
	background-color: var(--raised-backgroud-color);
	border-top: 3px var(--primary-accent-color) solid;
}

#resume {
	margin-top: 1rem;
}

.centered {
	text-align: center;
}

.summary > p {
	margin-bottom: 0rem;
}

.nav-icon {
	color: white;
}

.icon {
	margin-right: 0.5rem;
}

#comments-section {
	display: flex;
	flex-direction: column;
	justify-items: center;
	padding-bottom: unset;
}

.utterances {
	margin: auto;
	margin-bottom: 1rem;
}

.webring {
	display: flex;
	flex-direction: column;
}

.webring > * {
	margin-bottom: 1rem;
}

.webring > *:last-child {
	margin-bottom: 0;
}

.webring .webring-articles {
	display: flex;
	flex-direction: column;
}

.webring .webring-articles > * {
	margin-bottom: 1rem;
}

.webring .webring-articles > *:last-child {
	margin-bottom: 0;
}

.webring .webring-title {
	margin: 0;
	font-size: smaller;
}

.webring .webring-article {
	flex: 1 1 0;
	display: flex;
	flex-direction: column;
	padding-left: 0.5rem;
	border-left: 3px solid var(--secondary-accent-color);
}

.webring .webring-summary {
	font-size: 0.8rem;
	flex: 1 1 0;
}

.webring .webring-attribution {
	text-align: right;
	font-size: 0.8rem;
	margin: 0;
}

.webring .webring-header {
	font-size: medium;
	margin: 0;
	margin-bottom: 1rem;
}

@media only screen and (max-width: 600px) {
	#content-container {
		flex-direction: column;
	}

	#content-container > * {
		margin-right: 0rem;
		margin-bottom: 1rem;
	}

	#content-container > *:last-child {
		margin-bottom: 0rem;
	}

	#single-container > * {
		margin-bottom: 1rem;
	}

	#main {
		width: auto;
	}

	#main > *{
		margin-bottom: 1rem;
	}

	#sidebar {
		width: auto;
	}
}

